--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-spinners": "^0.13.3",
     "recoil": "^0.7.4",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
